# BusReminder

./: .gitignore  BusReminderService.sln  README.md  config.sample.json
Libs/libpng/: libpng.MD.lib  libpng.MD.x64.lib  libpng.MDd.lib  libpng.MDd.x64.lib  libpng.MT.lib  libpng.MT.x64.lib
Libs/zlib/: libzlib.MD.lib  libzlib.MD.x64.lib  libzlib.MDd.lib  libzlib.MDd.x64.lib  libzlib.MT.lib  libzlib.MT.x64.lib
ReminderScreen/: BusInformationRetriever.cpp  BusInformationRetriever.h  CMakeLists.txt  DataTypes.h  ReminderScreen.cpp  ReminderScreen.h  ReminderScreen.vcxproj  ReminderScreen.vcxproj.filters  Settings.cpp  Settings.h  main.cpp  raspbian.cmake
